add side margin to chat messages

--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -17,6 +17,7 @@
     <RelativeLayout
         android:id="@+id/content_container"
         android:layout_width="wrap_content"
+        android:layout_marginEnd="48dp"
         android:foreground="?selectableItemBackground"
         android:padding="6dp"
         android:layout_height="wrap_content"
