rename generated refs of create chat fragment

--- a/SportsSideKick/app/src/main/res/layout/fragment_chat_create.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat_create.xml
@@ -172,7 +172,7 @@
             android:background="#e9eaee"
             android:gravity="start|center_vertical"
             android:hint="@string/chat_give_name"
-            android:imeOptions="flagNoExtractUi"
+            android:imeOptions="actionDone"
             android:inputType="textCapSentences"
             android:maxLines="1"
             android:padding="@dimen/margin_15"
@@ -265,7 +265,7 @@
             android:drawableTint="@color/black"
             android:gravity="center_vertical"
             android:hint="@string/friends_search"
-            android:imeOptions="flagNoExtractUi|actionSearch"
+            android:imeOptions="actionSearch"
             android:inputType="textCapWords"
             android:lines="1"
             android:maxLines="1"
