--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/item_spacing_wall"
     android:foreground="?selectableItemBackground">
 
     <View
