--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post_new.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post_new.xml
@@ -5,6 +5,7 @@
     android:id="@+id/relativeLayout2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/item_spacing_wall"
     android:foreground="?selectableItemBackground">
 
     <View
