--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.content.WallFragment">
+    tools:context=".ui.fragment.content.wall.WallFragment">
 
     <!--For XML preview only, actual header is in the adapter-->
     <include
