--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -31,6 +31,7 @@
             tools:textStyle="bold"
             android:layout_width="wrap_content"
             android:lineSpacingMultiplier="0.9"
+            android:paddingBottom="2dp"
             android:layout_marginEnd="4dp"
             android:layout_marginStart="4dp"
             android:layout_height="wrap_content"
