--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -446,46 +446,6 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/full_screen_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
-        android:clickable="true"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/image_fullscreen"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/download_image_button"
-            android:layout_below="@id/close_image_button"
-            android:layout_centerInParent="true"
-            android:background="@color/colorPrimarySemiDarkSemiTransparent"
-            android:scaleType="fitCenter" />
-
-        <ImageView
-            android:id="@+id/close_image_button"
-            android:layout_width="@dimen/chat_button_size"
-            android:layout_height="@dimen/chat_button_size"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_margin="@dimen/margin_8"
-            android:scaleType="fitCenter"
-            android:src="?videoCloseButtonIcon"
-            android:tint="?videoCloseButtonChatColorRef" />
-
-        <ImageView
-            android:id="@+id/download_image_button"
-            android:layout_width="@dimen/chat_button_size"
-            android:layout_height="@dimen/chat_button_size"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_margin="@dimen/margin_8"
-            android:scaleType="fitCenter"
-            android:src="?downloadButtonIcon" />
-    </RelativeLayout>
-
     <!--** ** ** ** **  ** ** ** **  ** ** ** **  ** ** ** **  ** ** ** **  -->
     <!-- THIS IS INACTIVE CONTAINER -->
     <RelativeLayout
@@ -585,6 +545,59 @@
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/full_screen_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:visibility="gone"
+        app:cardElevation="2dp"
+        tools:visibility="visible">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@color/black"
+            app:elevation="4dp"
+            tools:elevation="4dp">
+
+            <ImageView
+                android:id="@+id/image_fullscreen"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:scaleType="fitCenter"
+                tools:src="@drawable/video_chat_background" />
+
+            <ImageView
+                android:id="@+id/close_image_button"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_margin="@dimen/margin_8"
+                android:background="@color/colorPrimarySemiDarkSemiTransparent"
+                android:foreground="?selectableItemBackground"
+                android:scaleType="fitCenter"
+                android:src="?videoCloseButtonIcon"
+                android:tint="?videoCloseButtonChatColorRef" />
+
+            <ImageView
+                android:id="@+id/download_image_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="8dp"
+                android:background="@color/colorPrimarySemiDarkSemiTransparent"
+                android:foreground="?selectableItemBackground"
+                android:padding="8dp"
+                android:scaleType="fitCenter"
+                android:src="?downloadButtonIcon" />
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
     <!--** ** ** ** **  ** ** ** **  ** ** ** **  ** ** ** **  ** ** ** **  -->
 
 
