--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -568,25 +568,29 @@
                 android:id="@+id/image_fullscreen"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:clickable="true"
                 android:layout_centerInParent="true"
+                android:focusable="false"
+                android:foreground="?selectableItemBackgroundBorderless"
                 android:scaleType="fitCenter"
                 tools:src="@drawable/video_chat_background" />
 
-            <ImageView
-                android:id="@+id/close_image_button"
+            <ImageButton
+                android:id="@+id/exit_fullscreen_icon"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
+                android:clickable="false"
                 android:layout_margin="@dimen/margin_8"
                 android:background="@color/colorPrimarySemiDarkSemiTransparent"
-                android:foreground="?selectableItemBackground"
                 android:scaleType="fitCenter"
                 android:src="?videoCloseButtonIcon"
                 android:tint="?videoCloseButtonChatColorRef" />
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/download_image_button"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
                 android:layout_margin="8dp"
