--- a/SportsSideKick/app/src/main/res/layout/fragment_friends_search.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_friends_search.xml
@@ -136,22 +136,24 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:background="@null"
+            fontPath="fonts/TitilliumWeb-SemiBold.ttf"
             android:hint="@string/friends_search"
             android:imeOptions="actionDone"
+            android:layout_toStartOf="@id/search_icon"
             android:layout_marginStart="16dp"
             android:textColor="@color/black"
             android:inputType="text"
-            android:textColorHint="#686868"
             android:maxLines="1"
-            android:textSize="@dimen/font_size_12" />
+            android:textSize="14sp"
+            android:textColorHint="#686868"
+            tools:textStyle="bold" />
 
         <ImageView
             android:id="@+id/search_icon"
             android:layout_width="@dimen/height_48"
             android:layout_height="@dimen/height_48"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:background="@color/colorPrimaryVeryLight"
+            android:tint="@color/colorPrimary"
             android:scaleType="centerInside"
             android:src="@drawable/icon_search" />
     </RelativeLayout>
