--- a/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
@@ -2,8 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/height_60"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorPrimaryMediumLight">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
         android:id="@+id/image_holder"
@@ -26,7 +25,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/margin_20"
         android:layout_toEndOf="@+id/image_holder"
         android:layout_toStartOf="@+id/deny_button">
 
@@ -35,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Name"
-            android:textColor="?friendItemTextColor" />
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/date_prefix"
@@ -43,13 +41,13 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/name"
             android:text="@string/requested_on"
-            android:textColor="?friendItemTextColor" />
+            android:textColor="@color/gray" />
 
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/name"
+            android:layout_alignBaseline="@id/date_prefix"
             android:layout_marginStart="@dimen/margin_5"
             android:layout_toEndOf="@+id/date_prefix"
             tools:text="Dec 1"
@@ -62,8 +60,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="@dimen/margin_16"
-        android:layout_marginTop="@dimen/margin_16"
+        android:paddingBottom="@dimen/margin_16"
+        android:paddingTop="@dimen/margin_16"
         android:background="?selectableItemBackgroundBorderless"
         android:scaleType="centerInside"
         app:srcCompat="@drawable/friend_request_accept" />
@@ -73,8 +71,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="@dimen/margin_16"
-        android:layout_marginTop="@dimen/margin_16"
+        android:paddingBottom="@dimen/margin_16"
+        android:paddingTop="@dimen/margin_16"
         android:layout_toStartOf="@+id/confirm_button"
         android:background="?selectableItemBackgroundBorderless"
         android:scaleType="centerInside"
@@ -84,7 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
         android:layout_alignParentBottom="true"
-        android:background="@color/black" />
+        android:background="#19000000" />
 
 
 </RelativeLayout>
