--- a/SportsSideKick/app/src/main/res/layout/row_add_friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_add_friend_item.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorPrimaryMediumLight"
     android:layout_height="@dimen/height_60">
 
     <RelativeLayout
@@ -27,9 +26,9 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:visibility="invisible"
             android:tint="@color/colorAccentSemiDark"
             android:src="@drawable/online_status" />
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -46,7 +45,8 @@
             android:ellipsize="end"
             android:lines="1"
             android:maxLines="1"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
+            tools:text="Test User"
             android:textSize="@dimen/font_size_11"
             android:textStyle="bold" />
         <TextView
@@ -56,10 +56,11 @@
             android:text="@string/friend_request_pending"
             android:lines="1"
             android:visibility="gone"
+            android:textColor="@color/gray"
             android:layout_marginEnd="@dimen/margin_14"
             android:layout_alignParentEnd="true"
             android:maxLines="1"
-            android:textColor="@color/white"
+            tools:visibility="visible"
             android:textSize="@dimen/font_size_11"
              />
 
@@ -73,14 +74,14 @@
         android:layout_centerVertical="true"
         android:background="@null"
         android:scaleType="centerInside"
-        android:layout_marginTop="@dimen/margin_16"
-        android:layout_marginBottom="@dimen/margin_16"
+        android:paddingBottom="@dimen/margin_16"
+        android:paddingTop="@dimen/margin_16"
         app:srcCompat="@drawable/add_friends_selector" />
     <View
         android:layout_width="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_height="@dimen/height_1"
-        android:background="@color/black"
+        android:background="#1c000000"
         />
 
 
