--- a/SportsSideKick/app/src/main/res/layout/fragment_friend_detail.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_friend_detail.xml
@@ -340,7 +340,7 @@
             android:id="@+id/video_button"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:visibility="visible"
+            android:visibility="gone"
             android:layout_weight="1">
 
             <ImageView
