--- a/SportsSideKick/app/src/main/res/layout/fragment_friend_detail.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_friend_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/white"
     android:clickable="true"
     android:orientation="vertical">
 
@@ -13,7 +13,6 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginTop="24dp"
-        tools:layout_marginTop="0dp"
         android:background="@drawable/phone_background"
         android:gravity="center"
         android:orientation="horizontal"
@@ -25,7 +24,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        tools:layout_marginTop="0dp" />
 
 
     <View
@@ -61,7 +61,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
 
-        android:background="@android:color/black"
+        android:background="#17000000"
         app:layout_constraintLeft_toLeftOf="@id/profile_container"
         app:layout_constraintRight_toRightOf="@id/profile_container"
         app:layout_constraintTop_toBottomOf="@id/profile_container"
@@ -82,7 +82,6 @@
         android:id="@+id/profile_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/colorPrimaryMediumLight"
         app:layout_constraintBottom_toTopOf="@id/guideline7"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -100,6 +99,7 @@
             android:layout_centerVertical="true"
             android:layout_marginBottom="8dp"
 
+            android:layout_marginStart="11dp"
             android:layout_marginTop="8dp"
             android:layout_toEndOf="@+id/profileImage"
             android:background="@drawable/user_status_backgraound"
@@ -113,9 +113,8 @@
             android:textSize="@dimen/font_size_10"
             android:textStyle="normal"
             app:layout_constraintBottom_toTopOf="@id/guideline2"
-            app:layout_constraintTop_toTopOf="@id/guideline"
             app:layout_constraintLeft_toLeftOf="@id/guideline5"
-            android:layout_marginStart="11dp" />
+            app:layout_constraintTop_toTopOf="@id/guideline" />
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -155,13 +154,13 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
             android:scaleType="fitCenter"
-            tools:src="?profileImageIcon"
             app:layout_constraintBottom_toTopOf="@id/guideline2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="@id/guideline3"
             app:layout_constraintRight_toLeftOf="@id/guideline4"
             app:layout_constraintTop_toTopOf="@id/guideline"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            tools:src="?profileImageIcon" />
 
 
         <android.support.constraint.Guideline
@@ -221,14 +220,14 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="3dp"
             android:gravity="center"
-            tools:text="99"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/font_size_10"
             android:textStyle="normal"
             app:layout_constraintLeft_toLeftOf="@id/guideline3"
             app:layout_constraintRight_toLeftOf="@id/guideline4"
-            app:layout_constraintTop_toTopOf="@id/view2" />
+            app:layout_constraintTop_toTopOf="@id/view2"
+            tools:text="99" />
 
         <TextView
             android:id="@+id/profile_name"
@@ -274,9 +273,9 @@
             app:layout_constraintRight_toLeftOf="@id/guideline4" />
 
         <android.support.constraint.Guideline
+            android:id="@+id/guideline5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/guideline5"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.5" />
 
@@ -317,7 +316,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.71"
+                app:layout_constraintGuide_percent="0.61"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="316dp" />
 
@@ -329,7 +328,7 @@
                 android:maxLines="1"
                 android:text="@string/chat"
                 android:textAlignment="center"
-                android:textColor="?white"
+                android:textColor="?black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -340,8 +339,8 @@
             android:id="@+id/video_button"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:visibility="gone"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:visibility="gone">
 
             <ImageView
                 android:layout_width="0dp"
@@ -369,7 +368,7 @@
                 android:maxLines="1"
                 android:text="@string/video_chat"
                 android:textAlignment="center"
-                android:textColor="?white"
+                android:textColor="?black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -379,10 +378,10 @@
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/more_button"
-            android:visibility="visible"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:visibility="visible">
 
 
             <ImageView
@@ -400,7 +399,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.71"
+                app:layout_constraintGuide_percent="0.61"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="316dp" />
 
@@ -411,7 +410,7 @@
                 android:maxLines="1"
                 android:text="@string/more"
                 android:textAlignment="center"
-                android:textColor="?white"
+                android:textColor="?black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -466,7 +465,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:padding="@dimen/padding_4"
-            android:textColor="?white" />
+            android:textColor="?black" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/in_common_recycler_view"
@@ -478,15 +477,15 @@
         <ImageView
             android:id="@+id/left_scroll"
             android:layout_width="@dimen/height_20"
-            android:layout_marginTop="@dimen/margin_25"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_arrow_right"
             android:layout_alignParentEnd="true"
-            android:scaleType="centerInside" />
+            android:layout_marginTop="@dimen/margin_25"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_arrow_right" />
 
         <ProgressBar
-        style="?android:attr/progressBarStyle"
             android:id="@+id/friend_progress_bar"
+            style="?android:attr/progressBarStyle"
             android:layout_width="@dimen/prodgres_bar"
             android:layout_height="@dimen/prodgres_bar"
             android:layout_centerInParent="true"
@@ -509,7 +508,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorPrimaryMediumLight" />
+            android:background="#17000000" />
 
         <TextView
             android:id="@+id/public_chat_text"
@@ -517,25 +516,27 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:padding="@dimen/padding_4"
-            android:textColor="?white" />
+            android:textColor="?black" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/all_friends_recycler_view"
-            android:layout_toStartOf="@+id/left_scroll_chat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/public_chat_text" />
+            android:layout_below="@id/public_chat_text"
+            android:layout_toStartOf="@+id/left_scroll_chat" />
+
         <ImageView
             android:id="@+id/left_scroll_chat"
-            android:layout_marginTop="@dimen/margin_25"
             android:layout_width="@dimen/height_20"
-            android:src="@drawable/ic_arrow_right"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
-            android:scaleType="centerInside" />
+            android:layout_marginTop="@dimen/margin_25"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_arrow_right" />
+
         <ProgressBar
-        style="?android:attr/progressBarStyle"
             android:id="@+id/chat_room_progress_bar"
+            style="?android:attr/progressBarStyle"
             android:layout_width="@dimen/prodgres_bar"
             android:layout_height="@dimen/prodgres_bar"
             android:layout_centerInParent="true"
@@ -547,7 +548,6 @@
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/colorPrimaryMediumLight"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/guideline9"
         app:layout_constraintHorizontal_bias="0.0"
@@ -572,8 +572,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:textAlignment="center"
-                    android:textColor="@color/colorPrimaryVeryLight"
-                    android:textSize="@dimen/font_size_25" />
+                    android:textColor="@color/gray"
+                    android:textSize="@dimen/font_size_25"
+                    tools:text="3" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -582,20 +583,21 @@
                     android:layout_marginTop="@dimen/margin_2"
                     android:text="@string/pinned"
                     android:textAlignment="center"
-                    android:textColor="?popupsCaptionColor" />
+                    android:textColor="@color/black" />
 
             </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/black" />
+                android:background="#17000000" />
 
         </RelativeLayout>
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@android:color/black" />
+            android:background="#17000000" />
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -614,8 +616,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:textAlignment="center"
-                    android:textColor="@color/colorPrimaryVeryLight"
-                    android:textSize="@dimen/font_size_25" />
+                    android:textColor="@color/gray"
+                    android:textSize="@dimen/font_size_25"
+                    tools:text="15" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -624,19 +627,20 @@
                     android:layout_marginTop="@dimen/margin_2"
                     android:text="@string/friends"
                     android:textAlignment="center"
-                    android:textColor="?popupsCaptionColor" />
+                    android:textColor="@color/black" />
 
             </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/black" />
+                android:background="#17000000" />
         </RelativeLayout>
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@android:color/black" />
+            android:background="#17000000" />
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -655,8 +659,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:textAlignment="center"
-                    android:textColor="@color/colorPrimaryVeryLight"
-                    android:textSize="@dimen/font_size_25" />
+                    android:textColor="@color/gray"
+                    android:textSize="@dimen/font_size_25"
+                    tools:text="28" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -665,14 +670,14 @@
                     android:layout_marginTop="@dimen/margin_2"
                     android:text="@string/comments"
                     android:textAlignment="center"
-                    android:textColor="?popupsCaptionColor" />
+                    android:textColor="@color/black" />
 
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/black" />
+                android:background="#17000000" />
         </RelativeLayout>
 
 
