--- a/SportsSideKick/app/src/main/res/layout-large/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_profile.xml
@@ -142,7 +142,7 @@
                     android:progressDrawable="@drawable/circular_progress_bar" />
 
                 <ImageView
-                    android:id="@+id/your_profile_image"
+                    android:id="@+id/profileImage"
                     android:layout_width="@dimen/popup_friend_profil_profile_image_size"
                     android:layout_height="@dimen/popup_friend_profil_profile_image_size"
                     android:layout_centerHorizontal="true"
@@ -173,7 +173,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/your_profile_name"
+                android:id="@+id/nameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignEnd="@id/profile_image_container"
