--- a/SportsSideKick/app/src/main/res/layout/fragment_friend_detail.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_friend_detail.xml
@@ -8,17 +8,25 @@
     android:clickable="true"
     android:orientation="vertical">
 
+    <!--Status bar background-->
+    <View
+        android:id="@+id/view4"
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:background="@drawable/gradient_black_to_transparent"
+        tools:visibility="gone" />
+
     <TextView
         android:id="@+id/caption"
         android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/phone_background"
+        android:layout_height="72dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:text="@string/user_profile"
+        android:paddingTop="12dp"
         android:textAlignment="center"
-        android:textColor="?popupsCaptionColor"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
         android:tileMode="repeat"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,12 +35,24 @@
         tools:layout_constraintTop_creator="1"
         tools:layout_marginTop="0dp" />
 
+    <ImageButton
+        android:id="@+id/backButton"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="@dimen/standard_button_height"
+        android:layout_height="@dimen/standard_button_height"
+        android:adjustViewBounds="true"
+        android:alpha="0.7"
+        android:padding="8dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
+        android:tint="@color/colorPrimary"
+        app:layout_constraintBottom_toTopOf="@+id/top_split_line" />
 
     <View
         android:id="@+id/top_split_line"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="?colorAccent"
+        android:background="#17000000"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/caption"
@@ -78,30 +98,136 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="230dp" />
 
-    <android.support.constraint.ConstraintLayout
+    <!-- Header -->
+    <RelativeLayout
         android:id="@+id/profile_container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/guideline7"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/top_split_line"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/top_split_line">
+
+        <!-- VIEW IN MIDDLE TO SPLIT EASIER -->
+        <View
+            android:id="@+id/center_split_line"
+            android:layout_width="@dimen/width_1"
+            android:layout_height="@dimen/height_1"
+            android:layout_centerHorizontal="true" />
+
+        <!-- PROFILE CONTAINER - IMAGE -->
+        <RelativeLayout
+            android:id="@+id/imageInfoContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:elevation="2dp">
+
+            <RelativeLayout
+                android:id="@+id/profile_image_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="@dimen/popup_friend_profil_progress_bar_size"
+                    android:layout_height="@dimen/popup_friend_profil_progress_bar_size"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/circle_shape"
+                    android:indeterminate="false"
+                    android:max="100"
+                    android:progress="60"
+                    android:progressDrawable="@drawable/circular_progress_bar" />
+
+                <ImageView
+                    android:id="@+id/profileImage"
+                    android:layout_width="@dimen/popup_friend_profil_profile_image_size"
+                    android:layout_height="@dimen/popup_friend_profil_profile_image_size"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:foreground="?selectableItemBackground"
+                    android:scaleType="fitXY"
+                    tools:src="?profileImageIcon" />
+
+            </RelativeLayout>
+
+            <ImageView
+                android:layout_width="@dimen/profile_level_marker_size"
+                android:layout_height="@dimen/profile_level_marker_size"
+                android:layout_alignEnd="@id/profile_image_container"
+                android:layout_alignStart="@id/profile_image_container"
+                android:layout_below="@id/profile_image_container"
+                android:layout_marginTop="@dimen/margin_negative_15"
+                android:src="?nextLevelMarkerIcon" />
+
+            <TextView
+                android:id="@+id/profile_image_level"
+                android:layout_width="@dimen/profile_level_marker_size"
+                android:layout_height="@dimen/profile_level_marker_size"
+                android:layout_alignEnd="@id/profile_image_container"
+                android:layout_alignStart="@id/profile_image_container"
+                android:layout_below="@id/profile_image_container"
+                android:layout_marginTop="@dimen/margin_negative_15"
+                android:gravity="center"
+                android:textColor="#686868"
+                android:textStyle="bold"
+                tools:text="0" />
+
+            <TextView
+                android:id="@+id/nameTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@id/profile_image_container"
+                android:layout_alignStart="@id/profile_image_container"
+                android:layout_below="@id/profile_image_container"
+                android:layout_marginTop="@dimen/margin_10"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/font_size_14"
+                android:textStyle="bold"
+                tools:text="Test User" />
+
+            <TextView
+                android:id="@+id/nickTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@id/profile_image_container"
+                android:layout_alignStart="@id/profile_image_container"
+                android:layout_below="@id/nameTextView"
+                android:gravity="center"
+                android:textColor="@color/gray"
+                android:textSize="12sp"
+                tools:text="Nickname" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="16dp"
+                android:layout_below="@id/nickTextView" />
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/profile_image_container"
+                android:layout_marginStart="@dimen/margin_15"
+                android:layout_marginTop="@dimen/margin_10"
+                android:layout_toEndOf="@+id/nameTextView">
+
+                <ImageView
+                    android:id="@+id/blue_shield"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/online_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_centerVertical="true"
-            android:layout_marginBottom="8dp"
-
-            android:layout_marginStart="11dp"
-            android:layout_marginTop="8dp"
-            android:layout_toEndOf="@+id/profileImage"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="101dp"
+            android:layout_marginTop="32dp"
             android:background="@drawable/user_status_backgraound"
             android:padding="@dimen/padding_4"
             android:paddingEnd="@dimen/padding_12"
@@ -111,175 +237,9 @@
             android:textAllCaps="true"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/font_size_10"
-            android:textStyle="normal"
-            app:layout_constraintBottom_toTopOf="@id/guideline2"
-            app:layout_constraintLeft_toLeftOf="@id/guideline5"
-            app:layout_constraintTop_toTopOf="@id/guideline" />
+            android:textStyle="normal" />
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginStart="4dp"
-            app:layout_constraintBottom_toTopOf="@id/guideline2"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="@id/guideline3"
-            app:layout_constraintRight_toLeftOf="@id/guideline4"
-            app:layout_constraintTop_toTopOf="@id/guideline"
-            app:layout_constraintVertical_bias="0.0">
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:layout_gravity="center|center_horizontal"
-                android:background="@drawable/circle_shape"
-                android:indeterminate="false"
-                android:max="100"
-                android:progress="60"
-                android:progressDrawable="@drawable/circular_progress_bar" />
-        </RelativeLayout>
-
-
-        <ImageView
-            android:id="@+id/profileImage"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginBottom="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
-            android:scaleType="fitCenter"
-            app:layout_constraintBottom_toTopOf="@id/guideline2"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="@id/guideline3"
-            app:layout_constraintRight_toLeftOf="@id/guideline4"
-            app:layout_constraintTop_toTopOf="@id/guideline"
-            app:layout_constraintVertical_bias="0.0"
-            tools:src="?profileImageIcon" />
-
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.19"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="59dp" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.59"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="131dp" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.4"
-            tools:layout_editor_absoluteX="165dp"
-            tools:layout_editor_absoluteY="25dp" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.596"
-            tools:layout_editor_absoluteX="245dp"
-            tools:layout_editor_absoluteY="25dp" />
-
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_alignEnd="@id/profile_image_container"
-            android:layout_alignStart="@id/profile_image_container"
-            android:layout_below="@id/profile_image_container"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:src="?nextLevelMarkerIcon"
-            app:layout_constraintLeft_toLeftOf="@id/guideline3"
-            app:layout_constraintRight_toLeftOf="@id/guideline4"
-            app:layout_constraintTop_toBottomOf="@id/view2" />
-
-        <TextView
-            android:id="@+id/profile_image_level"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="3dp"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/font_size_10"
-            android:textStyle="normal"
-            app:layout_constraintLeft_toLeftOf="@id/guideline3"
-            app:layout_constraintRight_toLeftOf="@id/guideline4"
-            app:layout_constraintTop_toTopOf="@id/view2"
-            tools:text="99" />
-
-        <TextView
-            android:id="@+id/profile_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="0dp"
-            android:textAlignment="center"
-            android:textColor="?popupsCaptionColor"
-            android:textSize="@dimen/font_size_16"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/profile_image_level" />
-
-        <TextView
-            android:id="@+id/profile_nick"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
-            android:textAlignment="center"
-            android:textColor="@color/colorAccent"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            app:layout_constraintHorizontal_bias="0.501"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/profile_name" />
-
-        <View
-            android:id="@+id/view2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="11dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="@id/profileImage"
-            app:layout_constraintHorizontal_bias="0.58"
-            app:layout_constraintLeft_toLeftOf="@id/guideline3"
-            app:layout_constraintRight_toLeftOf="@id/guideline4" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5" />
-
-    </android.support.constraint.ConstraintLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -291,6 +251,7 @@
         app:layout_constraintBottom_toTopOf="@id/guideline8"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/profile_container"
         app:layout_constraintVertical_bias="0.0">
 
@@ -470,6 +431,10 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/in_common_recycler_view"
             android:layout_width="match_parent"
+            android:paddingBottom="8dp"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
+            android:paddingTop="8dp"
             android:layout_height="match_parent"
             android:layout_below="@id/friends_community"
             android:layout_toStartOf="@+id/left_scroll" />
@@ -522,6 +487,10 @@
             android:id="@+id/all_friends_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingBottom="8dp"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
+            android:paddingTop="8dp"
             android:layout_below="@id/public_chat_text"
             android:layout_toStartOf="@+id/left_scroll_chat" />
 
