--- a/SportsSideKick/app/src/main/res/layout/friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:layout_width="70dp"
     android:layout_marginEnd="8dp"
+    android:foreground="?selectableItemBackgroundBorderless"
+    tools:layout_width="80dp"
     android:layout_marginStart="8dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="@dimen/margin_10">
@@ -36,7 +37,6 @@
         android:lineSpacingMultiplier="0.8"
         android:paddingTop="4dp"
         tools:text="Test User With Long Name"
-        android:textSize="@dimen/font_size_11"
-        android:textStyle="bold" />
+        android:textSize="@dimen/font_size_11" />
 
 </RelativeLayout>
