make progress bars larger

--- a/SportsSideKick/app/src/main/res/layout-large/fragment_friends_search.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_friends_search.xml
@@ -120,8 +120,8 @@
     <ProgressBar
         style="?android:attr/progressBarStyle"
         android:id="@+id/progressBar"
-        android:layout_width="@dimen/prodgres_bar"
-        android:layout_height="@dimen/prodgres_bar"
+        android:layout_width="@dimen/progress_bar"
+        android:layout_height="@dimen/progress_bar"
         android:visibility="gone"      android:layout_below="@id/enter_friend_name"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/margin_10"
