--- a/SportsSideKick/app/src/main/res/layout-large/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_login.xml
@@ -266,8 +266,8 @@
                                     <ProgressBar
                                         style="?android:attr/progressBarStyle"
                                         android:id="@+id/login_progress_bar"
-                                        android:layout_width="@dimen/prodgres_bar"
-                                        android:layout_height="@dimen/prodgres_bar"
+                                        android:layout_width="@dimen/progress_bar"
+                                        android:layout_height="@dimen/progress_bar"
                                         android:layout_centerInParent="true"
                                         android:elevation="@dimen/elevation_2"
                                         android:visibility="gone" />
@@ -294,8 +294,8 @@
                                     <ProgressBar
         style="?android:attr/progressBarStyle"
                                         android:id="@+id/reset_progress_bar"
-                                        android:layout_width="@dimen/prodgres_bar"
-                                        android:layout_height="@dimen/prodgres_bar"
+                                        android:layout_width="@dimen/progress_bar"
+                                        android:layout_height="@dimen/progress_bar"
                                         android:layout_centerInParent="true"
                                         android:elevation="@dimen/elevation_2"
                                         android:visibility="gone" />
