--- a/SportsSideKick/app/src/main/res/layout/fragment_friend_requests.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_friend_requests.xml
@@ -146,8 +146,8 @@
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
+            android:layout_width="@dimen/progress_bar"
+            android:layout_height="@dimen/progress_bar"
             android:layout_centerInParent="true"
             android:elevation="@dimen/elevation_2" />
 
