--- a/SportsSideKick/app/src/main/res/layout-large/popup_new_call.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_new_call.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/width_500"
     android:layout_height="@dimen/height_500"
     android:clickable="true">
@@ -35,8 +34,8 @@
     <ProgressBar
         style="?android:attr/progressBarStyle"
         android:id="@+id/progressBar"
-        android:layout_width="@dimen/prodgres_bar"
-        android:layout_height="@dimen/prodgres_bar"
+        android:layout_width="@dimen/progress_bar"
+        android:layout_height="@dimen/progress_bar"
         android:layout_centerInParent="true"
         android:elevation="@dimen/elevation_2" />
 
