--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_stash.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_stash.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="@dimen/margin_base_size_60"
@@ -21,8 +20,8 @@
         <ProgressBar
         style="?android:attr/progressBarStyle"
             android:id="@+id/progressBar"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
+            android:layout_width="@dimen/progress_bar"
+            android:layout_height="@dimen/progress_bar"
             android:layout_centerInParent="true"
             android:elevation="@dimen/elevation_2" />
 
