--- a/SportsSideKick/app/src/main/res/layout/fragment_friend_detail.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_friend_detail.xml
@@ -73,14 +73,11 @@
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
 
-
     <!-- PROFILE CONTAINER - IMAGE -->
-
     <View
         android:id="@+id/top_split_profile_image"
         android:layout_width="0dp"
         android:layout_height="1dp"
-
         android:background="#17000000"
         app:layout_constraintLeft_toLeftOf="@id/profile_container"
         app:layout_constraintRight_toRightOf="@id/profile_container"
@@ -119,6 +116,7 @@
             android:id="@+id/imageInfoContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:layout_centerInParent="true"
             android:elevation="2dp">
 
@@ -282,7 +280,7 @@
             <TextView
                 android:id="@+id/chat_button_phone_caption"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="11dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@string/chat"
@@ -296,8 +294,8 @@
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/video_button"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="56dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:visibility="gone">
 
@@ -439,6 +437,7 @@
             android:id="@+id/left_scroll"
             android:layout_width="@dimen/height_20"
             android:layout_height="match_parent"
+            android:alpha="0.25"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="@dimen/margin_25"
             android:scaleType="centerInside"
@@ -447,8 +446,9 @@
         <ProgressBar
             android:id="@+id/friend_progress_bar"
             style="?android:attr/progressBarStyle"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
+            android:layout_width="@dimen/progress_bar"
+            android:layout_height="@dimen/progress_bar"
+            tools:visibility="gone"
             android:layout_centerInParent="true"
             android:elevation="@dimen/elevation_2" />
 
@@ -494,6 +494,7 @@
             android:id="@+id/left_scroll_chat"
             android:layout_width="@dimen/height_20"
             android:layout_height="match_parent"
+            android:alpha="0.25"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="@dimen/margin_25"
             android:scaleType="centerInside"
@@ -502,8 +503,9 @@
         <ProgressBar
             android:id="@+id/chat_room_progress_bar"
             style="?android:attr/progressBarStyle"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
+            android:layout_width="@dimen/progress_bar"
+            android:layout_height="@dimen/progress_bar"
+            tools:visibility="gone"
             android:layout_centerInParent="true"
             android:elevation="@dimen/elevation_2" />
 
