--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -96,8 +96,8 @@
 
                     <ProgressBar
                         android:id="@+id/reset_progress_bar"
-                        android:layout_width="@dimen/prodgres_bar"
-                        android:layout_height="@dimen/prodgres_bar"
+                        android:layout_width="@dimen/progress_bar"
+                        android:layout_height="@dimen/progress_bar"
                         android:layout_gravity="center"
                         android:layout_marginTop="6dp"
                         android:elevation="@dimen/elevation_2"
@@ -287,8 +287,8 @@
 
                     <ProgressBar
                         android:id="@+id/login_progress_bar"
-                        android:layout_width="@dimen/prodgres_bar"
-                        android:layout_height="@dimen/prodgres_bar"
+                        android:layout_width="@dimen/progress_bar"
+                        android:layout_height="@dimen/progress_bar"
                         android:layout_gravity="center"
                         android:elevation="@dimen/elevation_2"
                         android:theme="@style/AppTheme.WhiteAccent"
