--- a/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_signup.xml
@@ -254,8 +254,8 @@
 
                     <ProgressBar
                         android:id="@+id/sign_up_progress_bar"
-                        android:layout_width="@dimen/prodgres_bar"
-                        android:layout_height="@dimen/prodgres_bar"
+                        android:layout_width="@dimen/progress_bar"
+                        android:layout_height="@dimen/progress_bar"
                         android:layout_centerInParent="true"
                         android:elevation="@dimen/elevation_2"
                         android:theme="@style/AppTheme.WhiteAccent"
@@ -303,8 +303,8 @@
         <ProgressBar
             android:id="@+id/progress_bar_veb_view"
             style="?android:attr/progressBarStyle"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
+            android:layout_width="@dimen/progress_bar"
+            android:layout_height="@dimen/progress_bar"
             android:layout_centerInParent="true"
             android:elevation="@dimen/elevation_2"
             android:visibility="visible" />
